--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      DevOps By <br>
+                      Devops Hero <br>
                       <span>
-                        Your Reyaz
+                        This is Naganath Horate
                       </span>
                     </h1>
                     <p>
