--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <a href="" class="contact_link2">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                Call : +918861264857
               </span>
             </a>
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                Naganath Horate
               </span>
             </a>
           </div>
@@ -88,7 +88,7 @@
                   <a class="nav-link" href="guard.html"> Guards </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="contact.html">Contact me</a>
                 </li>
               </ul>
             </div>
@@ -113,8 +113,8 @@
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      Call me any time, I'm here for you to help, if any help please call me of ping me in whatsapp 8861264857
+
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -131,14 +131,14 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      Your Skills <br>
+                      Skills  <br>
                       <span>
-                        Our Responsibility
+                        AWS Linux  Ansible Jenkins Docker Kubernetes etc... 
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      Please ping me  
+                      email  is aboube 
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -155,14 +155,14 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      Your Saftey <br>
+                      I have 2 years of expirence <br>
                       <span>
-                        Our Responsibility
+                        @ Egov foundation 
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      Worked as Linux  Admin
+                      
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -202,15 +202,14 @@
           <div class="detail-box">
             <div class="heading_container ">
               <h2>
-                Who Are We?
+                Who I Am?
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              in reprehenderit in voluptate velit
+              This is Naganth Hoarate
+              Education B E -Electonics and Comminication
+              AWS and DevOps  Engineer Actively looking for AWS cloud and DevOps Role
+              please let me know if any opportunites               
             </p>
             <div class="btn-box">
               <a href="">
@@ -231,7 +230,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our services
+          SKILS
         </h2>
       </div>
       <div class="row">
@@ -255,10 +254,11 @@
             </div>
             <div class="detail-box">
               <h6>
-                Home Security
+                Ansible  
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+               Ansible A configuration Mangement tool, A agentless tool , easy to use and  configure in remote machine 
+                YAML is used to write playbook, YAML(Yet another markup language) simple and understandable language.
               </p>
               <a href="">
                 Read More
@@ -335,10 +335,10 @@
             </div>
             <div class="detail-box">
               <h6>
-                Office Security
+                Docker 
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                Docker is open source platform, to containerized application , which helps to reduce the size of apllication.
               </p>
               <a href="">
                 Read More
@@ -409,10 +409,13 @@
             </div>
             <div class="detail-box">
               <h6>
-                Bodyguard
+                K8s
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                Kubernetes is  a Orchastration tool.helps to autoscaling of pods,selfhealing of Pods and Rolling update and Rolling back deployment stratergies, with Blue- green Deployments is added .
+                K8s works as master and slave  concept, 2  main components  of  K8s are 
+                1) control plane 
+                2) worker Node (Minions)
               </p>
               <a href="">
                 Read More
