--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title>Guarder</title>
+  <title>HORATE_N_R</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Lorem ipsumm dolor sit amet,
+                This is Naganath Horate,
               </span>
             </a>
             <a href="" class="contact_link2">
@@ -55,7 +55,7 @@
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Naganath Horate
+                naganath1895gmail.com
               </span>
             </a>
           </div>
@@ -66,7 +66,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
               <span>
-                Guarder
+                HORATE_N_R
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,13 +107,13 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      Devops Hero <br>
+                      Devops  <br>
                       <span>
                         This is Naganath Horate
                       </span>
                     </h1>
                     <p>
-                      Call me any time, I'm here for you to help, if any help please call me of ping me in whatsapp 8861264857
+                      Call me any time, or ping me in whatsapp 8861264857
 
                     </p>
                     <div class="btn-box">
@@ -133,12 +133,12 @@
                     <h1>
                       Skills  <br>
                       <span>
-                        AWS Linux  Ansible Jenkins Docker Kubernetes etc... 
+                        AWS Linux .... 
                       </span>
                     </h1>
                     <p>
                       Please ping me  
-                      email  is aboube 
+                      email:naganath1895@gmail.com 
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -566,7 +566,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Guards
+          MY Family 
         </h2>
         <p>
           Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
