--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- header section strats -->
     <div class="hero_bg_box">
       <div class="img-box">
-        <img src="images/Naganath .jpeg" alt="">
+        <img src="images/horate.jpeg" alt="">
       </div>
     </div>
 
