--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Services </a>
+                  <a class="nav-link" href="service.html"> AWS </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="guard.html"> Guards </a>
+                  <a class="nav-link" href="guard.html"> skills </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact me</a>
