--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      Devops  <br>
+                      AWS & DevOps Engineer <br>
                       <span>
                         This is Naganath Horate
                       </span>
@@ -137,7 +137,6 @@
                       </span>
                     </h1>
                     <p>
-                      Please ping me  
                       email:naganath1895@gmail.com 
                     </p>
                     <div class="btn-box">
@@ -155,9 +154,9 @@
                 <div class="col-md-7">
                   <div class="detail-box">
                     <h1>
-                      I have 2 years of expirence <br>
+                      I have 2 years of experience in linux and Networking <br>
                       <span>
-                        @ Egov foundation 
+                        @ Egov Foundation
                       </span>
                     </h1>
                     <p>
@@ -207,8 +206,9 @@
             </div>
             <p>
               This is Naganth Hoarate
-              Education B E -Electonics and Comminication
-              AWS and DevOps  Engineer Actively looking for AWS cloud and DevOps Role
+              AWS & DevOps Engineer 
+              B.E -Electonics and Comminication engg
+              Actively looking for AWS cloud and DevOps Role
               please let me know if any opportunites               
             </p>
             <div class="btn-box">
@@ -412,7 +412,7 @@
                 K8s
               </h6>
               <p>
-                Kubernetes is  a Orchastration tool.helps to autoscaling of pods,selfhealing of Pods and Rolling update and Rolling back deployment stratergies, with Blue- green Deployments is added .
+                Kubernetes is  a Orchastration tool,helps to autoscaling of pods,selfhealing of Pods and Rolling update and Rolling back deployment stratergies, with Blue- green Deployments is added .
                 K8s works as master and slave  concept, 2  main components  of  K8s are 
                 1) control plane 
                 2) worker Node (Minions)
@@ -444,17 +444,15 @@
           <div class="carousel-item active">
             <div class="box">
               <div class="img-box">
-                <img src="images/client.png" alt="">
+                <img src="images/Naganath .jpeg" alt="">
               </div>
               <div class="detail-box">
                 <h4>
-                  Minim Veniam
+                  Naganath Hoarte
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco laboris nisi ut aliquip
+                 I Naganath Hoarate, Hosur-585217, subDisti:Afzlapur, Dist:Gulbarga Karnataka
+                  Proud to be an Indian
                 </p>
               </div>
             </div>
@@ -462,17 +460,14 @@
           <div class="carousel-item ">
             <div class="box">
               <div class="img-box">
-                <img src="images/client.png" alt="">
+                <img src="images/Naganath .jpeg" alt="">
               </div>
               <div class="detail-box">
                 <h4>
-                  Minim Veniam
+                  
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco laboris nisi ut aliquip
+                  Ops! me Only 
                 </p>
               </div>
             </div>
