--- a/index.html
+++ b/index.html
@@ -460,14 +460,14 @@
           <div class="carousel-item ">
             <div class="box">
               <div class="img-box">
-                <img src="images/Naganath .jpeg" alt="">
+                <img src="images/ayyapa male.jpeg" alt="">
               </div>
               <div class="detail-box">
                 <h4>
                   
                 </h4>
                 <p>
-                  Ops! me Only 
+                  Ops! me Only , While i weared Ayyappa Male!
                 </p>
               </div>
             </div>
